fixed alignment issues on dex

--- a/DEXChart.css
+++ b/DEXChart.css
@@ -65,6 +65,7 @@ canvas {
 #switch-container {
 	width: 100%;
 	display: inline-flex;
+	align: center;
 	justify-content: center;
 }
 
@@ -115,7 +116,7 @@ button {
 #chooseChart {
 	border-top-left-radius: 10%;
 	border-bottom-left-radius: 10%;
-	
+
 }
 
 #chooseMap {
@@ -159,25 +160,28 @@ html,body {
 
 .title-container {
   position:relative;
-  width:97%;
+  width:100%;
   height:100%;
   display:inline-block;
-  float:right;
+  float:center;
 }
 
 .top-navbar h3 {
-  margin-left: 37%;
   display:block;
   line-height:50px;
   color: white;
   font-size:30px;
   font-family:Verdana, 'Geneva', sans-serif;
+	text-align: center;
 }
 
 .icon {
+	position:absolute;
+	top:0px;
+	left:0px;
   display:inline-block;
   width:3%;
-  height:100%;
+  height:83%;
 }
 
 .icon > a {
