--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ html,body {
 
 .title-container {
   position:relative;
-  width:97%;
+  width:100%;
   height:100%;
   display:inline-block;
   float:center;
